Bullet Continuous Collision Detection and Physics Library
Primary author and maintainer: Erwin Coumans


2008 April 14
	- Added ray cast support for Soft Bodies
	Thanks to Nathanael Presson for the contribution
	
2008 April 9
	- Cleanup of Stan Melax ConvexHull, removed Extras/ConvexHull, moved sources into LinearMath/BulletCollision

2008 April 4
	- Added btSliderConstraint and demo
	Thanks Roman Ponomarev
	
2008 April 3
	- Fixed btMinkowskiSumShape, and added hitpoint to btSubsimplexConvexCast

2008 April 2
	- Added Extras/CdTestFrameWork
	Thanks Pierre Terdiman

2008 April 1
	- Added posix thread (pthread) support
	Thanks Enrico

2008 March 30
	- Added Soft Body, cloth, rope and deformable volumes, including demos and interaction
	Thanks Nathanael Presson for this great contribution
	
	2008 March 17
	- Improved BulletColladaConverter
	Thanks John McCutchan

2008 March 15
	- btMultiSapBroadphase in a working state. Needs more optimizations to be fully useable.
	- Allow btOptimizedBvh to be used for arbitrary objects, not just triangles
	- added quicksort to btAlignedObjectArray
	- removed btTypedUserInfo, added btHashMap

2008 March 30
	- Moved quickstep solver and boxbox into Bullet/src folder
	Thanks Russell L. Smith for permission to redistribute Open Dynamics Engine quickstep and box-box under the ZLib license	

2008 Feb 27
	- Added initial version for Character Control Demo
	- Applied fixes to IBM Cell SDK 3.0 build makefiles
	Thanks Jochen and mojo for reporting/providing patch: http://www.bulletphysics.com/Bullet/phpBB3/viewtopic.php?f=9&t=1922

2008 Feb 8
	- Bugfixes in ConvexCast support against the world.
	Thanks to Isgmasa for reporting/providing fix: http://www.bulletphysics.com/Bullet/phpBB3/viewtopic.php?f=9&t=1823

2008 Feb 6
	- Added btCapsuleShapeX and btCapsuleShapeZ for capsules around X and Z axis (default capsule is around Y)
	
2008 Feb 3
	- Added btTypedUserInfo, useful for serialization

2008 Jan 31